# rental-sc-project

./: README.md
rental-contract/: .gitignore  Cargo.toml  README.md  client.sh
rental-contract/docs/: crates.js  help.html  search-index.js  settings.html  src-files.js
rental-contract/docs/rental_contract/: all.html  enum.ContractStatus.html  fn.contract_obj.html  index.html  sidebar-items.js  struct.AbiProvider.html  struct.ContractBuilder.html  struct.ContractObj.html  struct.DepositDecision.html  struct.Proxy.html  struct.ProxyTo.html  struct.RentalContractData.html  trait.AutoImpl.html  trait.EndpointWrappers.html  trait.ProxyTrait.html  trait.RentalContract.html
rental-contract/docs/rental_contract/__wasm__endpoints__/: fn.accept_contract.html  fn.callBack.html  fn.create_rental_contract.html  fn.get_contract_details.html  fn.get_contracts_by_landlord.html  fn.get_contracts_by_tenant.html  fn.get_deposit_decision_details.html  fn.get_payments_status.html  fn.init.html  fn.landlord_decision.html  fn.make_payment.html  fn.tenant_decision.html  fn.upgrade.html  index.html  sidebar-items.js
rental-contract/docs/search.desc/rental_contract/: rental_contract-desc-0-.js
rental-contract/docs/trait.impl/core/fmt/: trait.Debug.js
rental-contract/meta/: Cargo.toml
rental-contract/meta/src/: main.rs
rental-contract/scenarios/: rental_contract.scen.json
rental-contract/src/: rental_contract.rs
rental-contract/tests/: rental_contract_scenario_go_test.rs  rental_contract_scenario_rs_test.rs
rental-contract/wasm/: Cargo.toml
rental-contract/wasm/src/: lib.rs
(+59 files in other folders)
